--- a/service_test.ipynb
+++ b/service_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "7155bd5b-0692-4183-bf9e-57e33a24b4a1",
    "metadata": {},
    "outputs": [],
@@ -10,17 +10,18 @@
     "import numpy as np\n",
     "from array_compressor import compress_array, decompress_array, compress_array_noencode\n",
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "12bb7ef9-24b3-4741-975f-0e84a505795e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_data = np.load('map_mockup.npy').astype('int16')\n",
+    "map_data = np.load('map_500_500.npy').astype('int16')\n",
     "dtype = map_data.dtype\n",
     "shape = map_data.shape\n",
     "map_com = compress_array_noencode(map_data)"
@@ -28,22 +29,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "787f145e-1ff2-40e3-82b1-06be39863f88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14744"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "map_com"
+    "sys.getsizeof(map_com)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4df9187d-9812-48b5-9c00-116ad108d6e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('map_content.gz', 'wb') as file:\n",
+    "with open('map_content_500_500.gz', 'wb') as file:\n",
     "    \n",
     "    file.write(map_com)"
    ]
@@ -65,17 +77,18 @@
    "source": [
     "import requests\n",
     "\n",
-    "url_yield = 'http://127.0.0.1:5001/crop_yield' # Max Process time about 1 min (Mac M1 pro)\n",
+    "url_yield = 'http://127.0.0.1:5001/crop_yield_batch' # Max Process time about 1 min (Mac M1 pro)\n",
     "\n",
     "params = {\n",
     "    'rain': \"[1800,2500]\",\n",
     "    'temp': \"[20,35]\",\n",
-    "    'diss': \"False\",\n",
+    "    'diss': \"True\",\n",
+    "    'ij':\"[1000,3500]\",\n",
+    "    'shape':\"[500,500]\"\n",
     "}\n",
     "\n",
     "#data = {'data': map_com}\n",
-    "with open('map_content.gz', 'rb') as file:\n",
-    "\n",
+    "with open('map_content_500_500.gz', 'rb') as file:\n",
     "    file_data = {'file': file}\n",
     "    response = requests.post(url_yield, params=params, files=file_data)\n",
     "    data = response.json()\n",
@@ -94,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "8f5e70a5-2e20-461c-8636-fa550943dde1",
    "metadata": {},
    "outputs": [
@@ -131,86 +144,93 @@
        "      <th>sc</th>\n",
        "      <th>op</th>\n",
        "      <th>rb</th>\n",
+       "      <th>severity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>50</td>\n",
-       "      <td>1</td>\n",
-       "      <td>16511.354080</td>\n",
-       "      <td>32385.906624</td>\n",
-       "      <td>33886.938814</td>\n",
-       "      <td>27291.494346</td>\n",
-       "      <td>44112.284551</td>\n",
-       "      <td>93500.862048</td>\n",
-       "      <td>359405.972792</td>\n",
-       "      <td>71248.114664</td>\n",
-       "      <td>13320.369136</td>\n",
+       "      <td>102</td>\n",
+       "      <td>0</td>\n",
+       "      <td>275.828204</td>\n",
+       "      <td>541.018406</td>\n",
+       "      <td>566.093697</td>\n",
+       "      <td>455.914387</td>\n",
+       "      <td>859.489389</td>\n",
+       "      <td>1609.547172</td>\n",
+       "      <td>8575.459177</td>\n",
+       "      <td>1498.170792</td>\n",
+       "      <td>249.061213</td>\n",
+       "      <td>0.381052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>65</td>\n",
        "      <td>0</td>\n",
-       "      <td>323.754321</td>\n",
-       "      <td>635.022250</td>\n",
-       "      <td>664.454461</td>\n",
-       "      <td>535.131110</td>\n",
-       "      <td>859.286417</td>\n",
-       "      <td>1835.961229</td>\n",
-       "      <td>7146.691324</td>\n",
-       "      <td>1412.435779</td>\n",
-       "      <td>260.678342</td>\n",
+       "      <td>299.638837</td>\n",
+       "      <td>587.721355</td>\n",
+       "      <td>614.961249</td>\n",
+       "      <td>495.270804</td>\n",
+       "      <td>941.797555</td>\n",
+       "      <td>1750.338629</td>\n",
+       "      <td>9315.728322</td>\n",
+       "      <td>1627.499099</td>\n",
+       "      <td>271.543623</td>\n",
+       "      <td>0.203159</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>55</td>\n",
+       "      <td>56</td>\n",
        "      <td>0</td>\n",
-       "      <td>17780.107324</td>\n",
-       "      <td>34874.480481</td>\n",
-       "      <td>36490.853874</td>\n",
-       "      <td>29388.607147</td>\n",
-       "      <td>48352.336467</td>\n",
-       "      <td>102665.996934</td>\n",
-       "      <td>368686.719979</td>\n",
-       "      <td>68926.076303</td>\n",
-       "      <td>14716.626755</td>\n",
+       "      <td>326.203561</td>\n",
+       "      <td>639.826269</td>\n",
+       "      <td>669.481138</td>\n",
+       "      <td>539.179440</td>\n",
+       "      <td>1018.832888</td>\n",
+       "      <td>1905.009531</td>\n",
+       "      <td>10141.621786</td>\n",
+       "      <td>1771.786354</td>\n",
+       "      <td>295.239118</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>56</td>\n",
+       "      <td>95</td>\n",
        "      <td>0</td>\n",
-       "      <td>18831.322051</td>\n",
-       "      <td>36936.367219</td>\n",
-       "      <td>38648.305588</td>\n",
-       "      <td>31126.152151</td>\n",
-       "      <td>50638.204968</td>\n",
-       "      <td>107590.507455</td>\n",
-       "      <td>403075.621220</td>\n",
-       "      <td>78103.938556</td>\n",
-       "      <td>15309.403911</td>\n",
+       "      <td>332.749139</td>\n",
+       "      <td>652.664978</td>\n",
+       "      <td>682.914900</td>\n",
+       "      <td>549.998577</td>\n",
+       "      <td>1037.683868</td>\n",
+       "      <td>1940.147444</td>\n",
+       "      <td>10345.122865</td>\n",
+       "      <td>1807.338896</td>\n",
+       "      <td>299.843406</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>46</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15495.028510</td>\n",
-       "      <td>30392.452614</td>\n",
-       "      <td>31801.091569</td>\n",
-       "      <td>25611.617371</td>\n",
-       "      <td>42724.080496</td>\n",
-       "      <td>88664.471989</td>\n",
-       "      <td>314237.638037</td>\n",
-       "      <td>60703.864694</td>\n",
-       "      <td>12724.329568</td>\n",
+       "      <td>83</td>\n",
+       "      <td>0</td>\n",
+       "      <td>270.709885</td>\n",
+       "      <td>530.979168</td>\n",
+       "      <td>555.589158</td>\n",
+       "      <td>447.454355</td>\n",
+       "      <td>847.127254</td>\n",
+       "      <td>1581.909068</td>\n",
+       "      <td>8416.331374</td>\n",
+       "      <td>1470.370459</td>\n",
+       "      <td>245.464143</td>\n",
+       "      <td>0.367765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -227,114 +247,119 @@
        "    <tr>\n",
        "      <th>795</th>\n",
        "      <td>795</td>\n",
-       "      <td>29</td>\n",
+       "      <td>87</td>\n",
        "      <td>0</td>\n",
-       "      <td>9395.968750</td>\n",
-       "      <td>18429.558540</td>\n",
-       "      <td>19283.737517</td>\n",
-       "      <td>15530.526860</td>\n",
-       "      <td>24908.574330</td>\n",
-       "      <td>53262.093671</td>\n",
-       "      <td>207960.120430</td>\n",
-       "      <td>41139.155509</td>\n",
-       "      <td>7560.664137</td>\n",
+       "      <td>271.844002</td>\n",
+       "      <td>533.203662</td>\n",
+       "      <td>557.916753</td>\n",
+       "      <td>449.328928</td>\n",
+       "      <td>843.375467</td>\n",
+       "      <td>1585.490481</td>\n",
+       "      <td>8451.590902</td>\n",
+       "      <td>1476.530455</td>\n",
+       "      <td>245.022626</td>\n",
+       "      <td>0.380683</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>796</th>\n",
        "      <td>796</td>\n",
-       "      <td>20</td>\n",
+       "      <td>55</td>\n",
        "      <td>0</td>\n",
-       "      <td>6576.369126</td>\n",
-       "      <td>12899.104182</td>\n",
-       "      <td>13496.955920</td>\n",
-       "      <td>10870.031614</td>\n",
-       "      <td>18120.406562</td>\n",
-       "      <td>37864.895577</td>\n",
-       "      <td>133106.157108</td>\n",
-       "      <td>25234.033172</td>\n",
-       "      <td>5437.813988</td>\n",
+       "      <td>338.982689</td>\n",
+       "      <td>664.891666</td>\n",
+       "      <td>695.708274</td>\n",
+       "      <td>560.301966</td>\n",
+       "      <td>1059.195846</td>\n",
+       "      <td>1975.907781</td>\n",
+       "      <td>10538.923038</td>\n",
+       "      <td>1841.196646</td>\n",
+       "      <td>305.285490</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>797</th>\n",
        "      <td>797</td>\n",
-       "      <td>15</td>\n",
+       "      <td>92</td>\n",
        "      <td>0</td>\n",
-       "      <td>5022.196384</td>\n",
-       "      <td>9850.699244</td>\n",
-       "      <td>10307.262552</td>\n",
-       "      <td>8301.151048</td>\n",
-       "      <td>13711.735527</td>\n",
-       "      <td>28689.211404</td>\n",
-       "      <td>104073.735917</td>\n",
-       "      <td>20193.540202</td>\n",
-       "      <td>4104.595689</td>\n",
+       "      <td>340.815556</td>\n",
+       "      <td>668.486711</td>\n",
+       "      <td>699.469943</td>\n",
+       "      <td>563.331498</td>\n",
+       "      <td>1066.201265</td>\n",
+       "      <td>1987.173065</td>\n",
+       "      <td>10595.906612</td>\n",
+       "      <td>1851.151930</td>\n",
+       "      <td>307.210136</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>798</th>\n",
        "      <td>798</td>\n",
-       "      <td>42</td>\n",
+       "      <td>56</td>\n",
        "      <td>0</td>\n",
-       "      <td>13903.105547</td>\n",
-       "      <td>27270.003167</td>\n",
-       "      <td>28533.921853</td>\n",
-       "      <td>22980.339747</td>\n",
-       "      <td>35141.605320</td>\n",
-       "      <td>77353.651416</td>\n",
-       "      <td>339679.394126</td>\n",
-       "      <td>69322.010248</td>\n",
-       "      <td>10952.211152</td>\n",
+       "      <td>291.405405</td>\n",
+       "      <td>571.572035</td>\n",
+       "      <td>598.063435</td>\n",
+       "      <td>481.661827</td>\n",
+       "      <td>915.503258</td>\n",
+       "      <td>1703.094018</td>\n",
+       "      <td>9059.752131</td>\n",
+       "      <td>1582.778922</td>\n",
+       "      <td>264.423024</td>\n",
+       "      <td>0.342510</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>799</th>\n",
        "      <td>799</td>\n",
-       "      <td>50</td>\n",
+       "      <td>80</td>\n",
        "      <td>0</td>\n",
-       "      <td>16621.991956</td>\n",
-       "      <td>32602.915352</td>\n",
-       "      <td>34114.005530</td>\n",
-       "      <td>27474.366869</td>\n",
-       "      <td>43113.373969</td>\n",
-       "      <td>93675.240154</td>\n",
-       "      <td>385849.771891</td>\n",
-       "      <td>77364.913742</td>\n",
-       "      <td>13239.313973</td>\n",
+       "      <td>220.025434</td>\n",
+       "      <td>431.565039</td>\n",
+       "      <td>451.567351</td>\n",
+       "      <td>363.678403</td>\n",
+       "      <td>689.001496</td>\n",
+       "      <td>1286.438535</td>\n",
+       "      <td>6840.559091</td>\n",
+       "      <td>1195.076044</td>\n",
+       "      <td>199.815517</td>\n",
+       "      <td>0.691229</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>800 rows × 12 columns</p>\n",
+       "<p>800 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     ids  areas  irri           ri1           ri2           ri3           ri4  \\\n",
-       "0      0     50     1  16511.354080  32385.906624  33886.938814  27291.494346   \n",
-       "1      1      1     0    323.754321    635.022250    664.454461    535.131110   \n",
-       "2      2     55     0  17780.107324  34874.480481  36490.853874  29388.607147   \n",
-       "3      3     56     0  18831.322051  36936.367219  38648.305588  31126.152151   \n",
-       "4      4     46     1  15495.028510  30392.452614  31801.091569  25611.617371   \n",
-       "..   ...    ...   ...           ...           ...           ...           ...   \n",
-       "795  795     29     0   9395.968750  18429.558540  19283.737517  15530.526860   \n",
-       "796  796     20     0   6576.369126  12899.104182  13496.955920  10870.031614   \n",
-       "797  797     15     0   5022.196384   9850.699244  10307.262552   8301.151048   \n",
-       "798  798     42     0  13903.105547  27270.003167  28533.921853  22980.339747   \n",
-       "799  799     50     0  16621.991956  32602.915352  34114.005530  27474.366869   \n",
+       "     ids  areas  irri         ri1         ri2         ri3         ri4  \\\n",
+       "0      0    102     0  275.828204  541.018406  566.093697  455.914387   \n",
+       "1      1     65     0  299.638837  587.721355  614.961249  495.270804   \n",
+       "2      2     56     0  326.203561  639.826269  669.481138  539.179440   \n",
+       "3      3     95     0  332.749139  652.664978  682.914900  549.998577   \n",
+       "4      4     83     0  270.709885  530.979168  555.589158  447.454355   \n",
+       "..   ...    ...   ...         ...         ...         ...         ...   \n",
+       "795  795     87     0  271.844002  533.203662  557.916753  449.328928   \n",
+       "796  796     55     0  338.982689  664.891666  695.708274  560.301966   \n",
+       "797  797     92     0  340.815556  668.486711  699.469943  563.331498   \n",
+       "798  798     56     0  291.405405  571.572035  598.063435  481.661827   \n",
+       "799  799     80     0  220.025434  431.565039  451.567351  363.678403   \n",
        "\n",
-       "               mp             cf             sc            op            rb  \n",
-       "0    44112.284551   93500.862048  359405.972792  71248.114664  13320.369136  \n",
-       "1      859.286417    1835.961229    7146.691324   1412.435779    260.678342  \n",
-       "2    48352.336467  102665.996934  368686.719979  68926.076303  14716.626755  \n",
-       "3    50638.204968  107590.507455  403075.621220  78103.938556  15309.403911  \n",
-       "4    42724.080496   88664.471989  314237.638037  60703.864694  12724.329568  \n",
-       "..            ...            ...            ...           ...           ...  \n",
-       "795  24908.574330   53262.093671  207960.120430  41139.155509   7560.664137  \n",
-       "796  18120.406562   37864.895577  133106.157108  25234.033172   5437.813988  \n",
-       "797  13711.735527   28689.211404  104073.735917  20193.540202   4104.595689  \n",
-       "798  35141.605320   77353.651416  339679.394126  69322.010248  10952.211152  \n",
-       "799  43113.373969   93675.240154  385849.771891  77364.913742  13239.313973  \n",
+       "              mp           cf            sc           op          rb  severity  \n",
+       "0     859.489389  1609.547172   8575.459177  1498.170792  249.061213  0.381052  \n",
+       "1     941.797555  1750.338629   9315.728322  1627.499099  271.543623  0.203159  \n",
+       "2    1018.832888  1905.009531  10141.621786  1771.786354  295.239118  0.000000  \n",
+       "3    1037.683868  1940.147444  10345.122865  1807.338896  299.843406  0.000000  \n",
+       "4     847.127254  1581.909068   8416.331374  1470.370459  245.464143  0.367765  \n",
+       "..           ...          ...           ...          ...         ...       ...  \n",
+       "795   843.375467  1585.490481   8451.590902  1476.530455  245.022626  0.380683  \n",
+       "796  1059.195846  1975.907781  10538.923038  1841.196646  305.285490  0.000000  \n",
+       "797  1066.201265  1987.173065  10595.906612  1851.151930  307.210136  0.000000  \n",
+       "798   915.503258  1703.094018   9059.752131  1582.778922  264.423024  0.342510  \n",
+       "799   689.001496  1286.438535   6840.559091  1195.076044  199.815517  0.691229  \n",
        "\n",
-       "[800 rows x 12 columns]"
+       "[800 rows x 13 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "b933eb20-5712-42b5-8bf0-ad88b8e7aa6d",
    "metadata": {},
    "outputs": [],
